--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
 
         <main>
             <section>
-                <div class="container">
-                    <header>
-                        no i?...
-                    </header>
-                </div>
+                <div class="container"></div>
             </section>
         </main>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
