--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- Navigation -->
         <header>
             <nav class="navbar bg-secondary">
-                hejka...
+                <a class="d-inline-block" href="#">Home</a>
             </nav>
         </header>
 
