--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
+        <!--
         <script src="https://kit.fontawesome.com/4de7a4839e.js"></script>
+        -->
         <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
         <title>CC MarKus</title>
     </head>
@@ -14,7 +16,9 @@
         <!-- Navigation -->
         <header>
             <nav class="navbar bg-secondary">
-                <a class="d-inline-block" href="#">Home</a>
+                <a class="d-inline-block icon solid fa-home" href="#">
+                    <span>Home</span>
+                </a>
             </nav>
         </header>
 
