--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <a class="d-inline-block icon solid fa-home" href="#">
                     <span>Home</span>
                 </a>
+                <i class="fa fa-home" aria-hidden="true"></i>
             </nav>
         </header>
 
