--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
         <!-- Navigation -->
         <header>
             <nav class="navbar bg-secondary">
+<!--
                 <a class="d-inline-block icon solid fa-home" href="#">
                     <span>Home</span>
                 </a>
-                <i class="fa fa-home" aria-hidden="true"></i>
+-->
+                <i class="d-inline-block fa fa-home" aria-hidden="true"></i>
             </nav>
         </header>
 
