--- a/index.html
+++ b/index.html
@@ -16,12 +16,9 @@
         <!-- Navigation -->
         <header>
             <nav class="navbar bg-secondary">
-<!--
-                <a class="d-inline-block icon solid fa-home" href="#">
-                    <span>Home</span>
+                <a class="d-inline-block" href="#">
+                    <i class="fa fa-home" aria-hidden="true"></i>
                 </a>
--->
-                <i class="d-inline-block fa fa-home" aria-hidden="true"></i>
             </nav>
         </header>
 
