--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                     <a class="d-inline-block" href="#">
                         <i class="fa fa-home" aria-hidden="true"></i>
                     </a>
+                    <button class="navbar-toggler" type="button">
+                        <span class="navbar-toggler-icon"></span></button>
                 </nav>
             </header>
 
