--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                         <i class="fa fa-home" aria-hidden="true"></i>
                     </a>
                     <button class="navbar-toggler" type="button">
-                        <span class="navbar-toggler-icon"></span></button>
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
                 </nav>
             </header>
 
