--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div id="wrapper">
             <!-- Navigation -->
             <header>
-                <nav class="navbar bg-secondary">
-                    <a class="d-inline-block" href="#">
+                <nav class="navbar navbar-dark bg-secondary">
+                    <a class="navbar-brand d-inline-block" href="#">
                         <i class="fa fa-home" aria-hidden="true"></i>
                     </a>
                     <button class="navbar-toggler" type="button">
