--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <!-- Navigation -->
             <header>
                 <nav class="navbar navbar-dark bg-secondary">
-                    <a class="navbar-brand d-inline-block" href="#">
-                        <i class="fa fa-home" aria-hidden="true"></i>
+                    <a class="navbar-brand" href="#">
+                        <i class="d-inline-block fa fa-home" aria-hidden="true"></i>
                     </a>
                     <button class="navbar-toggler" type="button">
                         <span class="navbar-toggler-icon"></span>
