--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="wrapper">
             <!-- Navigation -->
             <header>
-                <nav class="navbar navbar-dark bg-secondary">
+                <nav class="navbar navbar-dark bg-secondary navbar-expand-md">
                     <a class="navbar-brand" href="#">
                         <i class="d-inline-block fa fa-home" aria-hidden="true"></i>
                     </a>
