--- a/index.html
+++ b/index.html
@@ -13,16 +13,19 @@
         <title>CC MarKus</title>
     </head>
     <body>
-        <div id="wrapper">
+        <div class="container">
             <!-- Navigation -->
             <header>
                 <nav class="navbar navbar-dark bg-secondary navbar-expand-md">
                     <a class="navbar-brand" href="#">
                         <i class="d-inline-block fa fa-home" aria-hidden="true"></i>
                     </a>
-                    <button class="navbar-toggler" type="button">
+                    <button class="navbar-toggler order-first" type="button" data-toggle="collapse" data-target="#mainmanu" aria-controls="mainmenu" aria-expanded="false">
                         <span class="navbar-toggler-icon"></span>
                     </button>
+                    <div class="collapse navbar-collapse" id="mainmanu">
+                        tu zaraz będzie menu...
+                    </div>
                 </nav>
             </header>
 
