--- a/index.html
+++ b/index.html
@@ -20,11 +20,27 @@
                     <a class="navbar-brand" href="#">
                         <i class="d-inline-block fa fa-home" aria-hidden="true"></i>
                     </a>
-                    <button class="navbar-toggler order-first" type="button" data-toggle="collapse" data-target="#mainmanu" aria-controls="mainmenu" aria-expanded="false">
+                    <button class="navbar-toggler order-first" type="button" data-toggle="collapse" data-target="#mainmanu" aria-controls="mainmenu" aria-expanded="false" aria-label="Przycisk menu">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="mainmanu">
-                        tu zaraz będzie menu...
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link dropdown">Profi</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link dropdown">Private</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">Contact</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link dropdown">Social</a>
+                            </li>
+                        </ul>
                     </div>
                 </nav>
             </header>
