--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
                             <li class="nav-item">
                                 <a href="#" class="nav-link">Home</a>
                             </li>
-                            <li class="nav-item">
-                                <a href="#" class="nav-link dropdown">Profi</a>
+                            <li class="nav-item dropdown">
+                                <a href="#" class="nav-link dropdown-toggle">Profi</a>
                             </li>
-                            <li class="nav-item">
-                                <a href="#" class="nav-link dropdown">Private</a>
+                            <li class="nav-item dropdown">
+                                <a href="#" class="nav-link dropdown-toggle">Private</a>
                             </li>
                             <li class="nav-item">
                                 <a href="#" class="nav-link">Contact</a>
                             </li>
-                            <li class="nav-item">
-                                <a href="#" class="nav-link dropdown">Social</a>
+                            <li class="nav-item dropdown">
+                                <a href="#" class="nav-link dropdown-toggle">Social</a>
                             </li>
                         </ul>
                     </div>
