--- a/index.html
+++ b/index.html
@@ -26,19 +26,25 @@
                     <div class="collapse navbar-collapse" id="mainmanu">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Home</a>
+                                <a href="#" class="nav-link"> Home </a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle">Profi</a>
+                                <a href="#" class="nav-link dropdown-toggle"> Profi </a>
+                                <div class="dropdown-menu">
+                                    <a href="#" class="dropdown-item"> Programmer </a>
+                                    <a href="#" class="dropdown-item"> Accountant </a>
+                                    <a href="#" class="dropdown-item"> Controller </a>
+                                    <a href="#" class="dropdown-item"> Manager </a>
+                                </div>
                             </li>
                             <li class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle">Private</a>
+                                <a href="#" class="nav-link dropdown-toggle"> Private </a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Contact</a>
+                                <a href="#" class="nav-link"> Contact </a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle">Social</a>
+                                <a href="#" class="nav-link dropdown-toggle"> Social </a>
                             </li>
                         </ul>
                     </div>
