--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                                 <a href="#" class="nav-link dropdown-toggle"> Profi </a>
                                 <div class="dropdown-menu">
                                     <a href="#" class="dropdown-item"> Programmer </a>
+                                    <div class="dropdown-divider"></div>
                                     <a href="#" class="dropdown-item"> Accountant </a>
                                     <a href="#" class="dropdown-item"> Controller </a>
                                     <a href="#" class="dropdown-item"> Manager </a>
