--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                     <a class="navbar-brand" href="#">
                         <i class="d-inline-block fa fa-home" aria-hidden="true"></i>
                     </a>
-                    <button class="navbar-toggler order-first" type="button" data-toggle="collapse" data-target="#mainmanu" aria-controls="mainmenu" aria-expanded="false" aria-label="Przycisk menu">
+                    <button class="navbar-toggler order-first" type="button" data-toggle="collapse" data-target="#mainmenu" aria-controls="mainmenu" aria-expanded="false" aria-label="Przycisk menu">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="mainmanu">
+                    <div class="collapse navbar-collapse" id="mainmenu">
                         <ul class="navbar-nav">
                             <li class="nav-item">
                                 <a href="#" class="nav-link"> Home </a>
