--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                                 <a href="#" class="nav-link"> Home </a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle"> Profi </a>
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"> Profi </a>
                                 <div class="dropdown-menu">
                                     <a href="#" class="dropdown-item"> Programmer </a>
                                     <div class="dropdown-divider"></div>
-                                    <a href="#" class="dropdown-item"> Accountant </a>
                                     <a href="#" class="dropdown-item"> Controller </a>
+                                    <a href="#" class="dropdown-item"> Accountant </a>
                                     <a href="#" class="dropdown-item"> Manager </a>
                                 </div>
                             </li>
