--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                                 <a href="#" class="nav-link"> Home </a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"> Profi </a>
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Profi </a>
                                 <div class="dropdown-menu">
                                     <a href="#" class="dropdown-item"> Programmer </a>
                                     <div class="dropdown-divider"></div>
