--- a/index.html
+++ b/index.html
@@ -22,17 +22,29 @@
                     <a class="navbar-brand" href="#">
                         <i class="d-inline-block fa fa-home" aria-hidden="true"></i>
                     </a>
-                    <button class="navbar-toggler order-first" type="button" data-toggle="collapse" data-target="#mainmenu" aria-controls="mainmenu" aria-expanded="false" aria-label="Przycisk menu">
+                    <button class="navbar-toggler order-first" 
+                            type="button" 
+                            data-toggle="collapse" 
+                            data-target="#mainmenu" 
+                            aria-controls="mainmenu" 
+                            aria-expanded="false" 
+                            aria-label="Przycisk menu">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="mainmenu">
                         <ul class="navbar-nav">
-                            <li class="nav-item">
+                            <li class="nav-item active">
                                 <a href="#" class="nav-link"> Home </a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Profi </a>
-                                <div class="dropdown-menu">
+                                <a href="#" 
+                                    class="nav-link dropdown-toggle" 
+                                    data-toggle="dropdown" 
+                                    role="button" 
+                                    aria-expanded="false" 
+                                    id="subProf"
+                                    aria-haspopup="true"> Profi </a>
+                                <div class="dropdown-menu" aria-labelledby="subProf">
                                     <a href="#" class="dropdown-item"> Programmer </a>
                                     <div class="dropdown-divider"></div>
                                     <a href="#" class="dropdown-item"> Controller </a>
