--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
         <main>
             <section>
                 <div class="container"></div>
+                <article class="panel intro">
+                    <header>
+                        <h1>Marek Kustosz</h1>
+                        <p>człek - orkiestra</p>
+                    </header>
+                </article>
             </section>
         </main>
 <!--
