--- a/index.html
+++ b/index.html
@@ -64,13 +64,14 @@
         </header>
         <main>
             <section>
-                <div class="container"></div>
-                <article class="panel intro">
-                    <header>
-                        <h1>Marek Kustosz</h1>
-                        <p>człek - orkiestra</p>
-                    </header>
-                </article>
+                <div class="container">
+                    <article class="panel intro">
+                        <header>
+                            <h1>Marek Kustosz</h1>
+                            <p>człek - orkiestra</p>
+                        </header>
+                    </article>
+                </div>
             </section>
         </main>
 <!--
