--- a/index.html
+++ b/index.html
@@ -62,16 +62,14 @@
                 </div>
             </nav>
         </header>
-        <main>
+        <main class="container">
             <section>
-                <div class="container">
-                    <article class="panel intro">
-                        <header>
-                            <h1>Marek Kustosz</h1>
-                            <p>człek - orkiestra</p>
-                        </header>
-                    </article>
-                </div>
+                <article class="panel intro">
+                    <header>
+                        <h1>Marek Kustosz</h1>
+                        <p>człek - orkiestra</p>
+                    </header>
+                </article>
             </section>
         </main>
 <!--
