--- a/index.html
+++ b/index.html
@@ -62,19 +62,21 @@
                 </div>
             </nav>
         </header>
-        <main class="container">
+        <main>
             <section>
-                <article class="panel intro">
-                    <header>
-                        <h1>Marek Kustosz</h1>
-                        <p>człek - orkiestra</p>
-                    </header>
-                </article>
+                <div class="container">
+                    <article class="panel intro">
+                        <header>
+                            <h1>Marek Kustosz</h1>
+                            <p>człek - orkiestra</p>
+                        </header>
+                        <a href="#" class="pic">
+                            <img src="images/obrazki_n_257282_smierc-dziecko-rowerki-pasy-droga.jpg" alt="">
+                        </a>
+                    </article>
+                </div>
             </section>
         </main>
-<!--
-        </div>
--->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>    
