--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <main>
             <section>
                 <div class="container">
-                    <article class="panel intro">
+                    <article class="panel intro" id="#home">
                         <header>
                             <h1>Marek Kustosz</h1>
                             <p>człek - orkiestra</p>
