--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <main>
             <section>
                 <div class="container">
-                    <article class="panel intro" id="#home">
+                    <div class="panel intro" id="#home">
                         <header>
                             <h1>Marek Kustosz</h1>
                             <p>człek - orkiestra</p>
@@ -73,7 +73,7 @@
                         <a href="#" class="pic">
                             <img src="images/obrazki_n_257282_smierc-dziecko-rowerki-pasy-droga.jpg" alt="">
                         </a>
-                    </article>
+                    </div>
                 </div>
             </section>
         </main>
