--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         <main>
             <section>
                 <div class="container">
-                    etetetetetetet
+                    <div>etetetetetetet</div>
+                    
 <!--
                     <div class="panel intro" id="#home">
                         <header>
