--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <main>
             <section>
                 <div class="container">
-                    <div>etetetetetetet</div>
+                    <div class="myHome">etetetetetetet</div>
                     
 <!--
                     <div class="panel intro" id="#home">
