--- a/index.html
+++ b/index.html
@@ -65,19 +65,21 @@
         <main>
             <section>
                 <div class="container">
-                    <div class="myHome">etetetetetetet</div>
-                    
+                    <div class="wrapper">
+                        <div class="myHome">etetetetetetet</div>
+                        
 <!--
-                    <div class="panel intro" id="#home">
-                        <header>
-                            <h1>Marek Kustosz</h1>
-                            <p>człek - orkiestra</p>
-                        </header>
-                        <a href="#" class="pic">
-                            <img src="images/obrazki_n_257282_smierc-dziecko-rowerki-pasy-droga.jpg" alt="">
-                        </a>
-                    </div>
+                        <div class="panel intro" id="#home">
+                            <header>
+                                <h1>Marek Kustosz</h1>
+                                <p>człek - orkiestra</p>
+                            </header>
+                            <a href="#" class="pic">
+                                <img src="images/obrazki_n_257282_smierc-dziecko-rowerki-pasy-droga.jpg" alt="">
+                            </a>
+                        </div>
 -->        
+                    </div>
                 </div>
             </section>
         </main>
