--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <section>
                 <div class="container">
                     <div class="wrapper">
-                        <div class="myHome">uyuyuyuyuyuyu</div>
+                        <div class="myHome">ppppppppppppp</div>
                         
 <!--
                         <div class="panel intro" id="#home">
