--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <main>
             <div class="container">
                 <div class="wrapper">
-                    <div class="myHome">ppppppppppppp</div>
+                    <div class="myHome">wwwwwwwwwwwwwwwwwww</div>
                     
 <!--
                     <div class="panel intro" id="#home">
