--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
             </nav>
         </header>
         <main>
-            <div class="container">
-                <div class="wrapper">
-                    <div class="myHome">wwwwwwwwwwwwwwwwwww</div>
+            <div class="">
+                <div class="">
+                    <div class="">wwwwwwwwwwwwwwwwwww</div>
                     
 <!--
                     <div class="panel intro" id="#home">
