--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </nav>
         </header>
         <main>
-            <div class="">
+            <div class="wrapper">
                 <div class="">
                     <div class="">wwwwwwwwwwwwwwwwwww</div>
                     
