--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <main>
             <div class="wrapper">
-                <div class="">
+                <div class="myHome">
                     <div class="">tttttttttttttttttttttttt</div>
                     
 <!--
