--- a/index.html
+++ b/index.html
@@ -66,19 +66,20 @@
         <main>
             <div class="wrapper">
                 <div class="myHome">
-                    <div class="">tttttttttttttttttttttttt</div>
-                    
 <!--
-                    <div class="panel intro" id="#home">
+                    <div class="">tttttttttttttttttttttttt</div>
+-->                            
+                    <article class="panel intro" id="#home">
                         <header>
                             <h1>Marek Kustosz</h1>
                             <p>człek - orkiestra</p>
                         </header>
+<!--
                         <a href="#" class="pic">
                             <img src="images/obrazki_n_257282_smierc-dziecko-rowerki-pasy-droga.jpg" alt="">
                         </a>
-                    </div>
--->        
+-->
+                    </article>
                 </div>
             </div>
         </main>
