--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <!--
                     <div class="">tttttttttttttttttttttttt</div>
 -->                            
-                    <article class="panel intro" id="#home">
+                    <article class="panel intro" id="#artHome">
                         <header>
                             <h1>Marek Kustosz</h1>
                             <p>człek - orkiestra</p>
