--- a/index.html
+++ b/index.html
@@ -64,22 +64,24 @@
         </header>
 
         <main>
-            <div class="wrapper">
-                <div class="myHome">
-<!--
-                    <div class="">tttttttttttttttttttttttt</div>
--->                            
-                    <article class="panel intro" id="#artHome">
-                        <header>
-                            <h1>Marek Kustosz</h1>
-                            <p>człek - orkiestra</p>
-                        </header>
-                        <a href="#" class="pic">
-                            <img src="images/obrazki_n_257282_smierc-dziecko-rowerki-pasy-droga.jpg" alt="">
-                        </a>
-                    </article>
+            <section class="lanpag">
+                <div class="container">
+                    <div class="myHome">
+    <!--
+                        <div class="">tttttttttttttttttttttttt</div>
+    -->                            
+                        <article class="panel intro" id="#artHome">
+                            <header>
+                                <h1>Marek Kustosz</h1>
+                                <p>człek - orkiestra</p>
+                            </header>
+                            <a href="#" class="pic">
+                                <img src="images/obrazki_n_257282_smierc-dziecko-rowerki-pasy-droga.jpg" alt="">
+                            </a>
+                        </article>
+                    </div>
                 </div>
-            </div>
+            </section>
         </main>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
