--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!--
                         <div class="">tttttttttttttttttttttttt</div>
     -->                            
-                        <article class="panel intro" id="#artHome">
+                        <article class="panel intro row" id="#artHome">
                             <header>
                                 <h1>Marek Kustosz</h1>
                                 <p>człek - orkiestra</p>
