--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                 <h1>Marek Kustosz</h1>
                                 <p>człek - orkiestra</p>
                             </header>
-                            <div style="text-align: center;">
+                            <div style="text-align: center; display: inline;">
                                 <a href="#" class="pic">
                                     <img src="images/obrazki_n_257282_smierc-dziecko-rowerki-pasy-droga.jpg" alt="">
                                 </a>
