--- a/index.html
+++ b/index.html
@@ -67,10 +67,7 @@
             <section class="lanpag">
                 <div class="container">
                     <div class="myHome">
-    <!--
-                        <div class="">tttttttttttttttttttttttt</div>
-    -->                            
-                        <article class="panel intro row" id="#artHome">
+                        <article class="panel intro" id="#artHome">
                             <header>
                                 <h1>Marek Kustosz</h1>
                                 <p>człek - orkiestra</p>
