--- a/index.html
+++ b/index.html
@@ -72,10 +72,12 @@
                                 <h1>Marek Kustosz</h1>
                                 <p>człek - orkiestra</p>
                             </header>
-                            <a href="#" class="pic">
-                                <img src="images/obrazki_n_257282_smierc-dziecko-rowerki-pasy-droga.jpg" alt="">
-                            </a>
-                        </article>
+                            <div class="hunt">
+                                <a href="#" class="pic">
+                                    <img src="images/obrazki_n_257282_smierc-dziecko-rowerki-pasy-droga.jpg" alt="">
+                                </a>
+                            </div>
+                            </article>
                     </div>
                 </div>
             </section>
