--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                 <h1>Marek Kustosz</h1>
                                 <p>człek - orkiestra</p>
                             </header>
-                            <div class="pic hunt">
+                            <div class="hunt">
 <!--                                
                                 <a href="#" class="pic">
                                     <img src="images/obrazki_n_257282_smierc-dziecko-rowerki-pasy-droga.jpg" alt="">
