--- a/index.html
+++ b/index.html
@@ -72,14 +72,19 @@
                                 <h1>Marek Kustosz</h1>
                                 <p>człek - orkiestra</p>
                             </header>
+<!--
                             <div class="hunt">
-<!--                                
-                                <a href="#" class="pic">
-                                    <img src="images/obrazki_n_257282_smierc-dziecko-rowerki-pasy-droga.jpg" alt="">
-                                </a>
 -->
+<!--                                <a href="#" class="pic"> -->
+                                <a href="#" class="hunt">
+<!--
+                                    <img src="images/obrazki_n_257282_smierc-dziecko-rowerki-pasy-droga.jpg" alt="">
+-->
+                                </a>
+<!--
                             </div>
-                            </article>
+-->
+                        </article>
                     </div>
                 </div>
             </section>
