--- a/index.html
+++ b/index.html
@@ -67,16 +67,14 @@
             <section class="lanpag">
                 <div class="container">
                     <div class="myHome">
-                        <article class="panel intro" id="#artHome">
+                        <article class="intro" id="#artHome">
                             <header>
                                 <h1>Marek Kustosz</h1>
                                 <p>człek - orkiestra</p>
                             </header>
-                            <div class="pic">
-                                <a href="#" class="hunt">
-                                    <img src="images/obrazki_n_257282_smierc-dziecko-rowerki-pasy-droga.jpg" alt="">
-                                </a>
-                            </div>
+                            <a href="#" class="pic">
+                                <img src="images/obrazki_n_257282_smierc-dziecko-rowerki-pasy-droga.jpg" alt="">
+                            </a>
                         </article>
                     </div>
                 </div>
