--- a/index.html
+++ b/index.html
@@ -72,9 +72,11 @@
                                 <h1>Marek Kustosz</h1>
                                 <p>człek - orkiestra</p>
                             </header>
-                            <a href="#" class="pic">
-                                <img src="images/obrazki_n_257282_smierc-dziecko-rowerki-pasy-droga.jpg" alt="">
-                            </a>
+                            <div class="pic">
+                                <a href="#">
+                                    <img src="images/obrazki_n_257282_smierc-dziecko-rowerki-pasy-droga.jpg" alt="" id="hunt">
+                                </a>
+                            </div>
                         </article>
                     </div>
                 </div>
