--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <section class="lanpag">
                 <div class="container">
                     <div class="myHome">
-                        <article class="intro" id="#artHome">
+                        <article class="intro">
                             <header>
                                 <h1>Marek Kustosz</h1>
                                 <p>człek - orkiestra</p>
